[package]
name = "ratelimiter-rs"
version = "0.1.1"
edition = "2021"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "a lite ratelimit utils for rust"
repository = "https://github.com/heqingpan/ratelimiter-rs"
readme = "README.md"
keywords = ["ratelimit", "qps"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
